--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,35 @@
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
 .DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+
+example/
 
 *.lock
-.packages
-.pub/
-.idea/
-.vscode/
 
-node_modules/
-
-build/
-
-.flutter-plugins
 android/key.properties
 
 ios/Runner.app.dSYM.zip
