--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,13 @@
 name: intent
-description: A simple to use Flutter plugin to deal with Android Intents - your one-stop-solution for Android Intents.
-version: 1.4.0
-homepage: https://github.com/itzmeanjan/intent
+description: A simple to use Flutter plugin to deal with Android Intents - your one-stop-solution for Android Intents. Migrated to null safety.
+version: 1.4.1
+homepage:
+  - https://github.com/itzmeanjan/intent
+  - https://github.com/kazbekbet
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
-  flutter: ">=1.12.0 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=1.12.0"
 
 dependencies:
   flutter:
